--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,2 +1,9 @@
 $tablet-width: 768px;
 $desktop-width: 1280px;
+
+$bandsite-black: #323232;
+$silver: #afafaf;
+$white: #ffffff;
+$bandsite-darkblack: #000000;
+$mercury: #e1e1e1;
+$alabaster: #fafafa;
