--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/fonts/AvenirNextLTPro-Regular.eot");
-  src: url("../../assets/fonts/AvenirNextLTPro-Regular.eot?#iefix")
+  src: url("../assets/fonts/AvenirNextLTPro-Regular.eot");
+  src: url("../assets/fonts/AvenirNextLTPro-Regular.eot?#iefix")
       format("embedded-opentype"),
-    url("../../assets/fonts/AvenirNextLTPro-Regular.woff2") format("woff2"),
-    url("../../assets/fonts/AvenirNextLTPro-Regular.woff") format("woff"),
-    url("../../assets/fonts/AvenirNextLTPro-Regular.ttf") format("truetype"),
-    url("../../assets/fonts/AvenirNextLTPro-Regular.svg#AvenirNextLTPro-Regular")
+    url("../assets/fonts/AvenirNextLTPro-Regular.woff2") format("woff2"),
+    url("../assets/fonts/AvenirNextLTPro-Regular.woff") format("woff"),
+    url("../assets/fonts/AvenirNextLTPro-Regular.ttf") format("truetype"),
+    url("../assets/fonts/AvenirNextLTPro-Regular.svg#AvenirNextLTPro-Regular")
       format("svg");
   font-weight: 400;
   font-style: normal;
@@ -15,7 +15,7 @@
 
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/fonts/AvenirNextLTPro-Demi.eot");
+  src: url("../assets/fonts/AvenirNextLTPro-Demi.eot");
   src: url("../../assets/fonts/AvenirNextLTPro-Demi.eot?#iefix")
       format("embedded-opentype"),
     url("../../assets/fonts/AvenirNextLTPro-Demi.woff2") format("woff2"),
