make tablet responsive

--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -16,12 +16,12 @@
 @font-face {
   font-family: "AvenirNext LT Pro";
   src: url("../assets/fonts/AvenirNextLTPro-Demi.eot");
-  src: url("../../assets/fonts/AvenirNextLTPro-Demi.eot?#iefix")
+  src: url("../assets/fonts/AvenirNextLTPro-Demi.eot?#iefix")
       format("embedded-opentype"),
-    url("../../assets/fonts/AvenirNextLTPro-Demi.woff2") format("woff2"),
-    url("../../assets/fonts/AvenirNextLTPro-Demi.woff") format("woff"),
-    url("../../assets/fonts/AvenirNextLTPro-Demi.ttf") format("truetype"),
-    url("../../assets/fonts/AvenirNextLTPro-Demi.svg#AvenirNextLTPro-Demi")
+    url("../assets/fonts/AvenirNextLTPro-Demi.woff2") format("woff2"),
+    url("../assets/fonts/AvenirNextLTPro-Demi.woff") format("woff"),
+    url("../assets/fonts/AvenirNextLTPro-Demi.ttf") format("truetype"),
+    url("../assets/fonts/AvenirNextLTPro-Demi.svg#AvenirNextLTPro-Demi")
       format("svg");
   font-weight: 600;
   font-style: normal;
@@ -30,13 +30,13 @@
 
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/fonts/AvenirNextLTPro-Bold.eot");
-  src: url("../../assets/fonts/AvenirNextLTPro-Bold.eot?#iefix")
+  src: url("../assets/fonts/AvenirNextLTPro-Bold.eot");
+  src: url("../assets/fonts/AvenirNextLTPro-Bold.eot?#iefix")
       format("embedded-opentype"),
-    url("../../assets/fonts/AvenirNextLTPro-Bold.woff2") format("woff2"),
-    url("../../assets/fonts/AvenirNextLTPro-Bold.woff") format("woff"),
-    url("../../assets/fonts/AvenirNextLTPro-Bold.ttf") format("truetype"),
-    url("../../assets/fonts/AvenirNextLTPro-Bold.svg#AvenirNextLTPro-Bold")
+    url("../assets/fonts/AvenirNextLTPro-Bold.woff2") format("woff2"),
+    url("../assets/fonts/AvenirNextLTPro-Bold.woff") format("woff"),
+    url("../assets/fonts/AvenirNextLTPro-Bold.ttf") format("truetype"),
+    url("../assets/fonts/AvenirNextLTPro-Bold.svg#AvenirNextLTPro-Bold")
       format("svg");
   font-weight: 700;
   font-style: normal;
