--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,13 +1,13 @@
 @use "./variables" as *;
 
 @mixin tablet {
-  @media (min-width: $tablet-width) {
+  @media screen and (min-width: $tablet-width) {
     @content;
   }
 }
 
 @mixin desktop {
-  @media (min-width: $desktop-width) {
+  @media screen and (min-width: $desktop-width) {
     @content;
   }
 } ;
