--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -9,7 +9,7 @@
 .hero {
   background-image: url("../assets/Images/hero-shows.jpg");
   background-size: cover;
-  height: 30vh;
+  height: 50vh;
   background-color: rgba(21, 21, 21, 0.447);
   background-blend-mode: saturation;
   @include tablet {
@@ -17,6 +17,11 @@
     background-size: cover;
     background-color: rgba(36, 36, 36, 0.432);
     background-blend-mode: saturation;
+    background-position: left;
+  }
+  @include desktop {
+    background-position: center;
+    height: 70vh;
   }
 
   &__wrapper {
@@ -25,6 +30,10 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    padding: 24px;
+    @include tablet {
+      padding: 40px;
+    }
     @include desktop {
       max-width: 1100px;
       margin: auto;
@@ -33,30 +42,49 @@
   &__top {
   }
   &__album-name {
-    margin-left: 1.5rem;
     color: $alabaster;
-    font-weight: 600;
+    font-weight: 400;
+    font-size: 22px;
+    margin-bottom: 24px;
+    @include tablet {
+      font-weight: 600;
+      font-size: 24px;
+    }
   }
   &__bottom {
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
+    width: 100%;
     @include desktop {
       flex-direction: row;
+      align-items: flex-start;
+      gap: 100px;
     }
   }
   &__title {
     font-size: 2.1875rem;
     color: white;
     font-weight: 600;
-    margin-left: 1.5rem;
+    width: 70%;
+    line-height: 1.5;
     @include tablet {
       font-size: 3.75rem;
-      margin-left: 0;
+      width: 80%;
+    }
+    @include desktop {
+      padding-top: 10px;
     }
   }
   &__song-embed {
-    width: 70%;
-    height: 150px;
+    width: 100%;
+    height: 160px;
+    margin-top: 24px;
+    @include tablet {
+      width: 70%;
+    }
+    @include desktop {
+      padding-bottom: 50px;
+      height: 210px;
+    }
   }
 }
