--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -39,8 +39,7 @@
       margin: auto;
     }
   }
-  &__top {
-  }
+
   &__album-name {
     color: $alabaster;
     font-weight: 400;
@@ -86,5 +85,12 @@
       padding-bottom: 50px;
       height: 210px;
     }
+  }
+}
+
+//-----------------------------Shows Tickets Section-------------------------------//
+
+.tickets {
+  &__wrapper {
   }
 }
