--- a/styles/partials/_globals.scss
+++ b/styles/partials/_globals.scss
@@ -35,7 +35,7 @@
   }
 
   &__logo {
-    width: 11.25rem;
+    width: 120px;
     padding-top: 1.5rem;
     padding-bottom: 1rem;
     @include tablet {
@@ -74,7 +74,7 @@
     border-bottom: 3px solid white;
   }
   &__nav-link {
-    font-size: 1.125rem;
+    font-size: 14px;
     font-weight: 400;
     text-decoration: none;
     color: $white;
