--- a/styles/shows.css
+++ b/styles/shows.css
@@ -58,7 +58,7 @@
   }
 }
 .header__logo {
-  width: 11.25rem;
+  width: 120px;
   padding-top: 1.5rem;
   padding-bottom: 1rem;
 }
@@ -101,7 +101,7 @@
   border-bottom: 3px solid white;
 }
 .header__nav-link {
-  font-size: 1.125rem;
+  font-size: 14px;
   font-weight: 400;
   text-decoration: none;
   color: #ffffff;
@@ -282,7 +282,7 @@
 .hero {
   background-image: url("../assets/Images/hero-shows.jpg");
   background-size: cover;
-  height: 50vh;
+  height: 40vh;
   background-color: rgba(21, 21, 21, 0.447);
   background-blend-mode: saturation;
 }
@@ -298,7 +298,7 @@
 @media screen and (min-width: 1280px) {
   .hero {
     background-position: center;
-    height: 70vh;
+    height: 80vh;
   }
 }
 .hero__wrapper {
@@ -323,7 +323,7 @@
 .hero__album-name {
   color: #fafafa;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 18px;
   margin-bottom: 24px;
 }
 @media screen and (min-width: 768px) {
@@ -345,10 +345,10 @@
   }
 }
 .hero__title {
-  font-size: 2.1875rem;
+  font-size: 24px;
   color: white;
   font-weight: 600;
-  width: 70%;
+  width: 80%;
   line-height: 1.5;
 }
 @media screen and (min-width: 768px) {
@@ -364,17 +364,113 @@
 }
 .hero__song-embed {
   width: 100%;
-  height: 160px;
+  height: 100px;
   margin-top: 24px;
 }
 @media screen and (min-width: 768px) {
   .hero__song-embed {
     width: 70%;
+    height: 140px;
   }
 }
 @media screen and (min-width: 1280px) {
   .hero__song-embed {
-    padding-bottom: 50px;
-    height: 210px;
+    height: 150px;
+    padding-top: 10px;
+  }
+}
+
+.tickets__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+@media screen and (min-width: 768px) {
+  .tickets__wrapper {
+    padding: 40px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .tickets__wrapper {
+    max-width: 1100px;
+    margin: auto;
+  }
+}
+.tickets__title {
+  font-size: 38px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  margin-left: 24px;
+}
+@media screen and (min-width: 768px) {
+  .tickets__title {
+    font-size: 40px;
+  }
+}
+.tickets__headings-container {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .tickets__headings-container {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.tickets__tablet-heading {
+  text-transform: uppercase;
+  color: #e1e1e1;
+  width: 20%;
+  text-align: left;
+}
+.tickets__tablet-heading--hidden {
+  visibility: hidden;
+  width: 20%;
+}
+.tickets__shows-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.tickets__show-list-item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 24px;
+}
+@media screen and (min-width: 768px) {
+  .tickets__show-list-item {
+    flex-direction: row;
+    padding: 0;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+.tickets__show-heading {
+  color: #e1e1e1;
+}
+@media screen and (min-width: 768px) {
+  .tickets__show-heading {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .tickets__show-info {
+    width: 20%;
+    text-align: left;
+  }
+}
+.tickets__buy-button {
+  padding: 5px 20px;
+  background-color: black;
+  color: white;
+  border: 3px solid black;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .tickets__buy-button {
+    width: 20%;
   }
 }/*# sourceMappingURL=shows.css.map */
