--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -9,7 +9,7 @@
 .hero {
   background-image: url("../assets/Images/hero-shows.jpg");
   background-size: cover;
-  height: 50vh;
+  height: 40vh;
   background-color: rgba(21, 21, 21, 0.447);
   background-blend-mode: saturation;
   @include tablet {
@@ -21,7 +21,7 @@
   }
   @include desktop {
     background-position: center;
-    height: 70vh;
+    height: 80vh;
   }
 
   &__wrapper {
@@ -43,7 +43,7 @@
   &__album-name {
     color: $alabaster;
     font-weight: 400;
-    font-size: 22px;
+    font-size: 18px;
     margin-bottom: 24px;
     @include tablet {
       font-weight: 600;
@@ -61,10 +61,10 @@
     }
   }
   &__title {
-    font-size: 2.1875rem;
+    font-size: 24px;
     color: white;
     font-weight: 600;
-    width: 70%;
+    width: 80%;
     line-height: 1.5;
     @include tablet {
       font-size: 3.75rem;
@@ -76,14 +76,15 @@
   }
   &__song-embed {
     width: 100%;
-    height: 160px;
+    height: 100px;
     margin-top: 24px;
     @include tablet {
       width: 70%;
+      height: 140px;
     }
     @include desktop {
-      padding-bottom: 50px;
-      height: 210px;
+      height: 150px;
+      padding-top: 10px;
     }
   }
 }
@@ -92,5 +93,90 @@
 
 .tickets {
   &__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    @include tablet {
+      padding: 40px;
+    }
+    @include desktop {
+      max-width: 1100px;
+      margin: auto;
+    }
+  }
+
+  &__title {
+    font-size: 38px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    margin-left: 24px;
+    @include tablet {
+      font-size: 40px;
+    }
+  }
+  &__headings-container {
+    display: none;
+    @include tablet {
+      display: flex;
+
+      justify-content: space-between;
+    }
+  }
+
+  &__tablet-heading {
+    text-transform: uppercase;
+    color: $mercury;
+    width: 20%;
+    text-align: left;
+    &--hidden {
+      visibility: hidden;
+      width: 20%;
+    }
+  }
+
+  &__shows-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &__show-list-item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 24px;
+    @include tablet {
+      flex-direction: row;
+      padding: 0;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+  &__show-heading {
+    color: $mercury;
+    @include tablet {
+      display: none;
+    }
+  }
+
+  &__show-info {
+    @include tablet {
+      width: 20%;
+      text-align: left;
+    }
+  }
+
+  &__buy-button {
+    padding: 5px 20px;
+    background-color: black;
+    color: white;
+    border: 3px solid black;
+    border-radius: 5px;
+    margin-top: 10px;
+    @include tablet {
+      width: 20%;
+    }
   }
 }
