--- a/styles/shows.css
+++ b/styles/shows.css
@@ -121,7 +121,7 @@
 /*-------------------Footer--------------------*/
 .footer {
   background-color: #323232;
-  padding: 1.5rem;
+  padding: 24px 16px;
   max-width: 100%;
 }
 @media screen and (min-width: 768px) {
@@ -268,6 +268,7 @@
     right: 0px;
     top: 0px;
     width: 7.5rem;
+    margin-right: 20px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -275,6 +276,7 @@
     position: absolute;
     right: 1.25rem;
     top: 1.875rem;
+    margin-right: 10px;
   }
 }
 
@@ -307,7 +309,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 24px;
+  padding: 16px;
 }
 @media screen and (min-width: 768px) {
   .hero__wrapper {
@@ -392,19 +394,31 @@
 }
 @media screen and (min-width: 1280px) {
   .tickets__wrapper {
+    flex-direction: row;
     max-width: 1100px;
     margin: auto;
+    gap: 120px;
   }
 }
 .tickets__title {
-  font-size: 38px;
+  font-size: 24px;
   font-weight: 600;
-  margin-bottom: 20px;
-  margin-left: 24px;
+  margin: 30px 0 16px 16px;
 }
 @media screen and (min-width: 768px) {
   .tickets__title {
     font-size: 40px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .tickets__title {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .tickets__content {
+    flex: 1;
+    padding-top: 25px;
   }
 }
 .tickets__headings-container {
@@ -413,38 +427,40 @@
 @media screen and (min-width: 768px) {
   .tickets__headings-container {
     display: flex;
+    padding: 0 20px;
     justify-content: space-between;
   }
 }
 .tickets__tablet-heading {
   text-transform: uppercase;
-  color: #e1e1e1;
-  width: 20%;
+  color: #afafaf;
+  width: 25%;
   text-align: left;
 }
 .tickets__tablet-heading--hidden {
   visibility: hidden;
-  width: 20%;
+  width: 25%;
 }
 .tickets__shows-list {
   list-style-type: none;
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 .tickets__show-list-item {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 24px;
+  padding: 24px 16px;
+  border-bottom: 1px solid #e1e1e1;
 }
 @media screen and (min-width: 768px) {
   .tickets__show-list-item {
     flex-direction: row;
-    padding: 0;
+    padding: 0 20px;
     align-items: center;
     justify-content: space-between;
+    gap: 5%;
   }
   .tickets__show-list-item:hover {
     cursor: pointer;
@@ -457,12 +473,27 @@
   background-color: #e1e1e1;
 }
 .tickets__show-heading {
-  color: #e1e1e1;
+  color: #afafaf;
+  font-weight: 600;
+  font-size: 12px;
 }
 @media screen and (min-width: 768px) {
   .tickets__show-heading {
     display: none;
   }
+}
+.tickets__show-date {
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+@media screen and (min-width: 768px) {
+  .tickets__show-date {
+    width: 20%;
+    text-align: left;
+  }
+}
+.tickets__show-info {
+  margin-bottom: 5px;
 }
 @media screen and (min-width: 768px) {
   .tickets__show-info {
@@ -471,15 +502,24 @@
   }
 }
 .tickets__buy-button {
-  padding: 5px 20px;
-  background-color: black;
+  background-color: #323232;
   color: white;
-  border: 3px solid black;
-  border-radius: 5px;
-  margin-top: 10px;
+  border: none;
+  border-radius: 4px;
+  height: 40px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 0 0 12px 0;
+  font-size: 15px;
+}
+.tickets__buy-button:hover {
+  background-color: black;
 }
 @media screen and (min-width: 768px) {
   .tickets__buy-button {
+    width: 150px;
+    margin: 20px 0;
+    margin-left: auto;
     width: 20%;
   }
 }/*# sourceMappingURL=shows.css.map */
