--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -30,7 +30,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding: 24px;
+    padding: 16px;
     @include tablet {
       padding: 40px;
     }
@@ -100,37 +100,48 @@
       padding: 40px;
     }
     @include desktop {
+      flex-direction: row;
       max-width: 1100px;
       margin: auto;
+      gap: 120px;
     }
   }
 
   &__title {
-    font-size: 38px;
+    font-size: 24px;
     font-weight: 600;
-    margin-bottom: 20px;
-    margin-left: 24px;
+    margin: 30px 0 16px 16px;
+
     @include tablet {
       font-size: 40px;
+    }
+    @include desktop {
+      margin: 0;
+    }
+  }
+  &__content {
+    @include desktop {
+      flex: 1;
+      padding-top: 25px;
     }
   }
   &__headings-container {
     display: none;
     @include tablet {
       display: flex;
-
+      padding: 0 20px;
       justify-content: space-between;
     }
   }
 
   &__tablet-heading {
     text-transform: uppercase;
-    color: $mercury;
-    width: 20%;
+    color: $silver;
+    width: 25%;
     text-align: left;
     &--hidden {
       visibility: hidden;
-      width: 20%;
+      width: 25%;
     }
   }
 
@@ -139,22 +150,22 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 20px;
   }
 
   &__show-list-item {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 24px;
+    padding: 24px 16px;
+    border-bottom: 1px solid $mercury;
 
     @include tablet {
       flex-direction: row;
-      padding: 0;
+      padding: 0 20px;
       align-items: center;
       justify-content: space-between;
+      gap: 5%;
       &:hover {
-        // background-color: $alabaster;
         cursor: pointer;
       }
     }
@@ -166,13 +177,24 @@
     }
   }
   &__show-heading {
-    color: $mercury;
+    color: $silver;
+    font-weight: 600;
+    font-size: 12px;
     @include tablet {
       display: none;
     }
   }
+  &__show-date {
+    font-weight: 600;
+    margin-bottom: 5px;
+    @include tablet {
+      width: 20%;
+      text-align: left;
+    }
+  }
 
   &__show-info {
+    margin-bottom: 5px;
     @include tablet {
       width: 20%;
       text-align: left;
@@ -180,14 +202,32 @@
   }
 
   &__buy-button {
-    padding: 5px 20px;
-    background-color: black;
+    background-color: $bandsite-black;
     color: white;
-    border: 3px solid black;
-    border-radius: 5px;
-    margin-top: 10px;
+    border: none;
+    border-radius: 4px;
+    height: 40px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 0 0 12px 0;
+    font-size: 15px;
+    &:hover {
+      background-color: black;
+    }
     @include tablet {
+      width: 150px;
+      margin: 20px 0;
+      margin-left: auto;
       width: 20%;
     }
+    // padding: 5px 20px;
+    // background-color: black;
+    // color: white;
+    // border: 3px solid black;
+    // border-radius: 5px;
+    // margin-top: 10px;
+    // @include tablet {
+    //   width: 20%;
+    // }
   }
 }
