--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,6 +1,20 @@
 $tablet-width: 768px;
 $desktop-width: 1280px;
 
+$mobile-page-header: 1.5rem;
+$mobile-section-header: 1.5rem;
+$mobile-sub-heading: 0.875rem;
+$mobile-body-copy: 0.8125rem;
+$mobile-footer-copy: 0.8125rem;
+$mobile-labels-buttons: 0.625rem;
+
+$tablet-desktop-page-header: 3.75rem;
+$tablet-desktop-section-header: 2.25rem;
+$tablet-desktop-sub-heading: 1.5rem;
+$tablet-desktop-body-copy: 0.875rem;
+$tablet-desktop-footer-copy: 0.875rem;
+$tablet-desktop-labels-buttons: 0.75rem;
+
 $bandsite-black: #323232;
 $silver: #afafaf;
 $white: #ffffff;
