--- a/styles/shows.css
+++ b/styles/shows.css
@@ -47,7 +47,7 @@
 }
 @media screen and (min-width: 1280px) {
   .header__wrapper {
-    max-width: 1100px;
+    max-width: 68.75rem;
     margin: auto;
   }
 }
@@ -58,7 +58,7 @@
   }
 }
 .header__logo {
-  width: 120px;
+  width: 7.5rem;
   padding-top: 1.5rem;
   padding-bottom: 1rem;
 }
@@ -121,7 +121,7 @@
 /*-------------------Footer--------------------*/
 .footer {
   background-color: #323232;
-  padding: 24px 16px;
+  padding: 1.5rem 1rem;
   max-width: 100%;
 }
 @media screen and (min-width: 768px) {
@@ -140,7 +140,7 @@
 @media screen and (min-width: 1280px) {
   .footer__wrapper {
     padding: 1.875rem 2.5rem 2.5rem 2.5rem;
-    max-width: 1100px;
+    max-width: 68.75rem;
     margin: auto;
   }
 }
@@ -160,12 +160,12 @@
 .footer__socials-container {
   flex: 1;
   width: 100%;
-  padding-top: 8px;
+  padding-top: 0.5rem;
   display: flex;
   justify-content: flex-start;
   gap: 1.875rem;
   position: absolute;
-  top: 40px;
+  top: 2.5rem;
 }
 @media screen and (min-width: 768px) {
   .footer__socials-container {
@@ -174,7 +174,7 @@
   }
 }
 .footer__socials-icon {
-  height: 24px;
+  height: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .footer__socials-icon {
@@ -242,7 +242,7 @@
 .footer__copyright {
   color: white;
   font-weight: 400;
-  font-size: 11px;
+  font-size: 0.6875rem;
   padding-top: 4.375rem;
 }
 @media screen and (min-width: 768px) {
@@ -262,8 +262,8 @@
 }
 .footer__logo {
   position: absolute;
-  top: 310px;
-  width: 120px;
+  top: 19.375rem;
+  width: 7.5rem;
 }
 @media screen and (min-width: 768px) {
   .footer__logo {
@@ -274,7 +274,7 @@
     right: 0px;
     top: 0px;
     width: 7.5rem;
-    margin-right: 20px;
+    margin-right: 1.25rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -282,7 +282,7 @@
     position: absolute;
     right: 1.25rem;
     top: 1.875rem;
-    margin-right: 10px;
+    margin-right: 0.625rem;
   }
 }
 
@@ -315,16 +315,16 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 16px;
+  padding: 1rem;
 }
 @media screen and (min-width: 768px) {
   .hero__wrapper {
-    padding: 40px;
+    padding: 2.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .hero__wrapper {
-    max-width: 1100px;
+    max-width: 68.75rem;
     margin: auto;
   }
 }
@@ -332,7 +332,7 @@
   color: #fafafa;
   font-weight: 400;
   font-size: 0.875rem;
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .hero__album-name {
@@ -349,7 +349,7 @@
   .hero__bottom {
     flex-direction: row;
     align-items: flex-start;
-    gap: 100px;
+    gap: 6.25rem;
   }
 }
 .hero__title {
@@ -367,24 +367,24 @@
 }
 @media screen and (min-width: 1280px) {
   .hero__title {
-    padding-top: 10px;
+    padding-top: 0.625rem;
   }
 }
 .hero__song-embed {
   width: 100%;
-  height: 100px;
-  margin-top: 24px;
+  height: 6.25rem;
+  margin-top: 1.5rem;
 }
 @media screen and (min-width: 768px) {
   .hero__song-embed {
     width: 70%;
-    height: 140px;
+    height: 8.75rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .hero__song-embed {
-    height: 150px;
-    padding-top: 10px;
+    height: 9.375rem;
+    padding-top: 0.625rem;
   }
 }
 
@@ -395,21 +395,21 @@
 }
 @media screen and (min-width: 768px) {
   .tickets__wrapper {
-    padding: 40px;
+    padding: 2.5rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .tickets__wrapper {
     flex-direction: row;
-    max-width: 1100px;
+    max-width: 68.75rem;
     margin: auto;
-    gap: 120px;
+    gap: 7.5rem;
   }
 }
 .tickets__title {
   font-size: 1.5rem;
   font-weight: 600;
-  margin: 30px 0 16px 16px;
+  margin: 1.875rem 0 1rem 1rem;
 }
 @media screen and (min-width: 768px) {
   .tickets__title {
@@ -424,7 +424,7 @@
 @media screen and (min-width: 1280px) {
   .tickets__content {
     flex: 1;
-    padding-top: 25px;
+    padding-top: 1.5625rem;
   }
 }
 .tickets__headings-container {
@@ -433,7 +433,7 @@
 @media screen and (min-width: 768px) {
   .tickets__headings-container {
     display: flex;
-    padding: 0 20px;
+    padding: 0 1.25rem;
     justify-content: space-between;
   }
 }
@@ -458,14 +458,14 @@
 .tickets__show-list-item {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  padding: 24px 16px;
+  gap: 0.625rem;
+  padding: 1.5rem 1rem;
   border-bottom: 1px solid #e1e1e1;
 }
 @media screen and (min-width: 768px) {
   .tickets__show-list-item {
     flex-direction: row;
-    padding: 0 20px;
+    padding: 0 1.25rem;
     align-items: center;
     justify-content: space-between;
     gap: 5%;
@@ -493,7 +493,7 @@
 .tickets__show-date {
   font-weight: 600;
   font-size: 0.8125rem;
-  margin-bottom: 5px;
+  margin-bottom: 0.3125rem;
 }
 @media screen and (min-width: 768px) {
   .tickets__show-date {
@@ -504,7 +504,7 @@
   }
 }
 .tickets__show-info {
-  margin-bottom: 5px;
+  margin-bottom: 0.3125rem;
   font-size: 0.8125rem;
 }
 @media screen and (min-width: 768px) {
@@ -520,19 +520,20 @@
   color: white;
   border: none;
   border-radius: 4px;
-  height: 40px;
+  height: 2.5rem;
   text-transform: uppercase;
   font-weight: 600;
-  margin: 0 0 12px 0;
-  font-size: 15px;
+  margin: 0 0 0.75rem 0;
+  font-size: 0.9375rem;
 }
 .tickets__buy-button:hover {
   background-color: black;
+  cursor: pointer;
 }
 @media screen and (min-width: 768px) {
   .tickets__buy-button {
-    width: 150px;
-    margin: 20px 0;
+    width: 9.375rem;
+    margin: 1.25rem 0;
     margin-left: auto;
     width: 20%;
   }
