--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -30,12 +30,12 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding: 16px;
+    padding: 1rem;
     @include tablet {
-      padding: 40px;
+      padding: 2.5rem;
     }
     @include desktop {
-      max-width: 1100px;
+      max-width: 68.75rem;
       margin: auto;
     }
   }
@@ -44,7 +44,7 @@
     color: $alabaster;
     font-weight: 400;
     font-size: $mobile-sub-heading;
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
     @include tablet {
       font-weight: 600;
       font-size: $tablet-desktop-sub-heading;
@@ -57,7 +57,7 @@
     @include desktop {
       flex-direction: row;
       align-items: flex-start;
-      gap: 100px;
+      gap: 6.25rem;
     }
   }
   &__title {
@@ -71,20 +71,20 @@
       width: 80%;
     }
     @include desktop {
-      padding-top: 10px;
+      padding-top: 0.625rem;
     }
   }
   &__song-embed {
     width: 100%;
-    height: 100px;
-    margin-top: 24px;
+    height: 6.25rem;
+    margin-top: 1.5rem;
     @include tablet {
       width: 70%;
-      height: 140px;
+      height: 8.75rem;
     }
     @include desktop {
-      height: 150px;
-      padding-top: 10px;
+      height: 9.375rem;
+      padding-top: 0.625rem;
     }
   }
 }
@@ -97,20 +97,20 @@
     flex-direction: column;
     gap: 10px;
     @include tablet {
-      padding: 40px;
+      padding: 2.5rem;
     }
     @include desktop {
       flex-direction: row;
-      max-width: 1100px;
+      max-width: 68.75rem;
       margin: auto;
-      gap: 120px;
+      gap: 7.5rem;
     }
   }
 
   &__title {
     font-size: $mobile-section-header;
     font-weight: 600;
-    margin: 30px 0 16px 16px;
+    margin: 1.875rem 0 1rem 1rem;
 
     @include tablet {
       font-size: $tablet-desktop-section-header;
@@ -122,14 +122,14 @@
   &__content {
     @include desktop {
       flex: 1;
-      padding-top: 25px;
+      padding-top: 1.5625rem;
     }
   }
   &__headings-container {
     display: none;
     @include tablet {
       display: flex;
-      padding: 0 20px;
+      padding: 0 1.25rem;
       justify-content: space-between;
     }
   }
@@ -157,13 +157,13 @@
   &__show-list-item {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 24px 16px;
+    gap: 0.625rem;
+    padding: 1.5rem 1rem;
     border-bottom: 1px solid $mercury;
 
     @include tablet {
       flex-direction: row;
-      padding: 0 20px;
+      padding: 0 1.25rem;
       align-items: center;
       justify-content: space-between;
       gap: 5%;
@@ -189,7 +189,7 @@
   &__show-date {
     font-weight: 600;
     font-size: $mobile-body-copy;
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
     @include tablet {
       font-size: $tablet-desktop-body-copy;
       margin-bottom: 0;
@@ -199,7 +199,7 @@
   }
 
   &__show-info {
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
     font-size: $mobile-body-copy;
     @include tablet {
       font-size: $tablet-desktop-body-copy;
@@ -214,28 +214,20 @@
     color: white;
     border: none;
     border-radius: 4px;
-    height: 40px;
+    height: 2.5rem;
     text-transform: uppercase;
     font-weight: 600;
-    margin: 0 0 12px 0;
-    font-size: 15px;
+    margin: 0 0 0.75rem 0;
+    font-size: 0.9375rem;
     &:hover {
       background-color: black;
+      cursor: pointer;
     }
     @include tablet {
-      width: 150px;
-      margin: 20px 0;
+      width: 9.375rem;
+      margin: 1.25rem 0;
       margin-left: auto;
       width: 20%;
     }
-    // padding: 5px 20px;
-    // background-color: black;
-    // color: white;
-    // border: 3px solid black;
-    // border-radius: 5px;
-    // margin-top: 10px;
-    // @include tablet {
-    //   width: 20%;
-    // }
   }
 }
